--- a/src/sendmate.html
+++ b/src/sendmate.html
@@ -63,11 +63,15 @@
                     </div>
 
                     <div class="project-image" data-aos="fade-in" data-aos-delay="500">
-                        <img src="images/Sendmate-2500x1569-joy_kuenzl-4.jpg">
+                        <img src="images/Sendmate-2500x1573-joy_kuenzl-4.jpg">
                     </div>
 
                     <div class="project-image" data-aos="fade-in" data-aos-delay="500">
                         <img src="images/Sendmate-2500x1569-joy_kuenzl-5.jpg">
+                    </div>
+
+                    <div class="project-image" data-aos="fade-in" data-aos-delay="500">
+                        <img src="images/Sendmate-2500x1570-joy_kuenzl-6.jpg">
                     </div>
                 </div>
             </div>
